# streamterminal-relay-matrix

./: .env.example  .gitignore  INSTALL.md  LICENSE  QUICK-UI-TEST.md  README.md  install.sh  package.json  run-live-stream-test.sh  start.sh  test-vps-ui.sh  vps-diagnostic-report.sh
.github/workflows/: ci.yml
apps/api/: .env.example  pyproject.toml
apps/api/app/: __init__.py  config.py  main.py  runtime.py  schemas.py  storage.py
apps/api/data/: draft-config.json
apps/api/scripts/: host_restore_snapshot.py
apps/api/tests/: conftest.py  test_bundle_rotation.py  test_host_restore_cli.py  test_host_snapshots.py  test_local_deploy.py  test_probe_stream.py  test_smoke.py
apps/web/: next.config.ts  package-lock.json  package.json  playwright.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/config/: page.tsx
apps/web/app/deploy/: page.tsx
apps/web/app/diagnostics/: page.tsx
apps/web/lib/: api.ts
apps/web/tests/: dashboard.spec.ts  deploy.spec.ts  relayMatrixServer.ts
docs/: architecture.md  mvp-plan.md  operations.md  product-vision.md  roadmap.md
